--- a/dev/paths.ipynb
+++ b/dev/paths.ipynb
@@ -10,81 +10,15 @@
     "import logging\n",
     "import re\n",
     "from pprint import pprint\n",
-    "\n",
+    "from jaf import path\n",
     "logger = logging.getLogger(__name__)\n",
     "logger.setLevel(logging.INFO)\n",
-    "\n",
-    "class PathValue:\n",
-    "    \"\"\"\n",
-    "    A class to represent a value from a path in a JSON object.\n",
-    "    \"\"\"\n",
-    "    def __init__(self, value: Any, path: List[str] = None):\n",
-    "        self.value = value\n",
-    "        self.path = path\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        return f\"{self.__class__.__name__}(value={self.value}, path={self.path})\"\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def path_values(path: Union[str, List[str]], obj: Any) -> List[PathValue]:\n",
-    "\n",
-    "    if isinstance(path, str):\n",
-    "        path = path.strip()\n",
-    "        tokens = re.findall(r'\\*\\*|\\*|\\[[^\\]]+\\]|[^.]+', path)\n",
-    "\n",
-    "    elif isinstance(path, list):\n",
-    "        tokens = path\n",
-    "\n",
-    "    if tokens[0] == '$':\n",
-    "        tokens = tokens[1:]\n",
-    "\n",
-    "    return path_values_ast(obj, tokens, ['$'])\n",
-    "\n",
-    "\n",
-    "def path_values_ast(obj: Any,\n",
-    "                    tokens: List[str],\n",
-    "                    path: List[str]) -> List[PathValue]:\n",
-    "        if not tokens:\n",
-    "            return [PathValue(obj, path)]\n",
-    "\n",
-    "        token = tokens[0]\n",
-    "        results = []\n",
-    "\n",
-    "        if token == '**':\n",
-    "            results.extend(path_values_ast(obj, tokens[1:], path))\n",
-    "\n",
-    "            if isinstance(obj, dict):\n",
-    "                for k, v in obj.items():\n",
-    "                    results.extend(path_values_ast(v, tokens, path+[k]))\n",
-    "            elif isinstance(obj, list):\n",
-    "                for i, item in enumerate(obj):\n",
-    "                    results.extend(path_values_ast(item, tokens, path+[[i]]))\n",
-    "        elif token == '*':\n",
-    "            if isinstance(obj, dict):\n",
-    "                for k, v in obj.items():\n",
-    "                    results.extend(path_values_ast(v, tokens[1:], path+[k]))\n",
-    "            elif isinstance(obj, list):\n",
-    "                for i, item in enumerate(obj):\n",
-    "                    results.extend(path_values_ast(item, tokens[1:], path+[[i]]))\n",
-    "        elif re.match(r'\\[\\d+\\]', token):\n",
-    "            index = int(token.strip('[]'))\n",
-    "            if isinstance(obj, list) and 0 <= index < len(obj):\n",
-    "                results.extend(path_values_ast(obj[index], tokens[1:], path+[[index]]))\n",
-    "        elif isinstance(obj, dict) and token in obj:\n",
-    "            results.extend(path_values_ast(obj[token], tokens[1:], path+[token]))\n",
-    "\n",
-    "        return results\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -192,13 +126,41 @@
        "  'settings': {'theme': 'dark', 'notifications': True}}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "path: ['*', 'users', '*', 'name']\n",
+      "[PathValue(value=Alice, path=['$', [0], 'users', [0], 'name']),\n",
+      " PathValue(value=Bob, path=['$', [0], 'users', [1], 'name']),\n",
+      " PathValue(value=Charlie, path=['$', [0], 'users', [2], 'name'])]\n",
+      "--------------------------------------------------------------------------------\n",
+      "[PathValue(value=Alice, path=['$', [0], 'users', [0], 'name']),\n",
+      " PathValue(value=Bob, path=['$', [0], 'users', [1], 'name']),\n",
+      " PathValue(value=Charlie, path=['$', [0], 'users', [2], 'name'])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = path.path_values(\"*.users.*.name\", data)\n",
+    "pprint(names)\n",
+    "print('-'*80)\n",
+    "names_ast = path.path_values_ast(data, [\"*\", \"users\", \"*\", \"name\"])\n",
+    "pprint(names_ast)"
    ]
   },
   {
@@ -210,26 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[PathValue(value=Alice, path=['$', [0], 'users', [0], 'name']),\n",
-      " PathValue(value=Bob, path=['$', [0], 'users', [1], 'name']),\n",
-      " PathValue(value=Charlie, path=['$', [0], 'users', [2], 'name'])]\n"
-     ]
-    }
-   ],
-   "source": [
-    "names = path_values(\"*.users.*.name\", data)\n",
-    "pprint(names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "path: ['**', 'emails']\n",
       "[PathValue(value=['alice@example.com', 'alice.work@example.com'], path=['$', [0], 'users', [0], 'profile', 'emails']),\n",
       " PathValue(value=['bob@example.com'], path=['$', [0], 'users', [1], 'profile', 'emails']),\n",
       " PathValue(value=['alice2@example.com', 'alice.work2@example.com'], path=['$', [1], 'users2', [0], 'profile', 'emails']),\n",
@@ -238,13 +181,13 @@
     }
    ],
    "source": [
-    "emails = path_values(\"**.emails\", data)\n",
+    "emails = path.path_values(\"**.emails\", data)\n",
     "pprint(emails)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -281,13 +224,32 @@
        "  'emails': ['alice@example.com', 'alice.work@example.com']}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "path: ['profile', 'emails']\n",
+      "[PathValue(value=['alice@example.com', 'alice.work@example.com'], path=['$', 'profile', 'emails'])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "emails2 = path.path_values(\"profile.emails\", data3)\n",
+    "pprint(emails2)"
    ]
   },
   {
@@ -299,13 +261,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[PathValue(value=['alice@example.com', 'alice.work@example.com'], path=['$', 'profile', 'emails'])]\n"
+      "path: ['**', 'emails']\n",
+      "[PathValue(value=['alicedeep@example.com', ['bobdeep@test.com', 'joedeep@test.com']], path=['$', 'test', 'test2', 'test3', 'emails']),\n",
+      " PathValue(value=['alice@example.com', 'alice.work@example.com'], path=['$', 'profile', 'emails'])]\n"
      ]
     }
    ],
    "source": [
-    "emails2 = path_values(\"profile.emails\", data3)\n",
-    "pprint(emails2)"
+    "emails3 = path.path_values(\"**.emails\", data3)\n",
+    "pprint(emails3)"
    ]
   },
   {
@@ -317,31 +281,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[PathValue(value=['alicedeep@example.com', ['bobdeep@test.com', 'joedeep@test.com']], path=['$', 'test', 'test2', 'test3', 'emails']),\n",
-      " PathValue(value=['alice@example.com', 'alice.work@example.com'], path=['$', 'profile', 'emails'])]\n"
-     ]
-    }
-   ],
-   "source": [
-    "emails3 = path_values(\"**.emails\", data3)\n",
-    "pprint(emails3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "path: ['profile', 'emails', '[0]']\n",
       "[PathValue(value=alice@example.com, path=['$', 'profile', 'emails', [0]])]\n"
      ]
     }
    ],
    "source": [
-    "emails4 = path_values(\"profile.emails.[0]\", data3)\n",
+    "emails4 = path.path_values(\"profile.emails.[0]\", data3)\n",
     "pprint(emails4)"
    ]
   }
