maybe old push from basement system

--- a/dev/paths.ipynb
+++ b/dev/paths.ipynb
@@ -144,14 +144,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "path: ['*', 'users', '*', 'name']\n",
-      "[PathValue(value=Alice, path=['$', [0], 'users', [0], 'name']),\n",
-      " PathValue(value=Bob, path=['$', [0], 'users', [1], 'name']),\n",
-      " PathValue(value=Charlie, path=['$', [0], 'users', [2], 'name'])]\n",
+      "[PathValue(value=Alice, path=['$', '[0]', 'users', '[0]', 'name']),\n",
+      " PathValue(value=Bob, path=['$', '[0]', 'users', '[1]', 'name']),\n",
+      " PathValue(value=Charlie, path=['$', '[0]', 'users', '[2]', 'name'])]\n",
       "--------------------------------------------------------------------------------\n",
-      "[PathValue(value=Alice, path=['$', [0], 'users', [0], 'name']),\n",
-      " PathValue(value=Bob, path=['$', [0], 'users', [1], 'name']),\n",
-      " PathValue(value=Charlie, path=['$', [0], 'users', [2], 'name'])]\n"
+      "[PathValue(value=Alice, path=['$', '[0]', 'users', '[0]', 'name']),\n",
+      " PathValue(value=Bob, path=['$', '[0]', 'users', '[1]', 'name']),\n",
+      " PathValue(value=Charlie, path=['$', '[0]', 'users', '[2]', 'name'])]\n"
      ]
     }
    ],
@@ -165,21 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "path: ['**', 'emails']\n",
-      "[PathValue(value=['alice@example.com', 'alice.work@example.com'], path=['$', [0], 'users', [0], 'profile', 'emails']),\n",
-      " PathValue(value=['bob@example.com'], path=['$', [0], 'users', [1], 'profile', 'emails']),\n",
-      " PathValue(value=['alice2@example.com', 'alice.work2@example.com'], path=['$', [1], 'users2', [0], 'profile', 'emails']),\n",
-      " PathValue(value=['bob2@example.com'], path=['$', [1], 'users2', [1], 'profile', 'emails'])]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "emails = path.path_values(\"**.emails\", data)\n",
     "pprint(emails)"
@@ -242,8 +229,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "path: ['profile', 'emails']\n",
-      "[PathValue(value=['alice@example.com', 'alice.work@example.com'], path=['$', 'profile', 'emails'])]\n"
+      "['alice@example.com', 'alice.work@example.com']\n"
      ]
     }
    ],
@@ -261,9 +247,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "path: ['**', 'emails']\n",
-      "[PathValue(value=['alicedeep@example.com', ['bobdeep@test.com', 'joedeep@test.com']], path=['$', 'test', 'test2', 'test3', 'emails']),\n",
-      " PathValue(value=['alice@example.com', 'alice.work@example.com'], path=['$', 'profile', 'emails'])]\n"
+      "['alicedeep@example.com',\n",
+      " ['bobdeep@test.com', 'joedeep@test.com'],\n",
+      " 'alice@example.com',\n",
+      " 'alice.work@example.com']\n"
      ]
     }
    ],
@@ -281,8 +268,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "path: ['profile', 'emails', '[0]']\n",
-      "[PathValue(value=alice@example.com, path=['$', 'profile', 'emails', [0]])]\n"
+      "[PathValue(value=alice@example.com, path=['$', 'profile', 'emails', '[0]'])]\n"
      ]
     }
    ],
