--- a/dev/wrapper.ipynb
+++ b/dev/wrapper.ipynb
@@ -1,8 +1,57 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Function Wrapper `utils.wrap`\n",
+    "\n",
+    "Suppose we have a predicate `lower_case : str -> str` that returns the upper-case\n",
+    "version of a string.\n",
+    "\n",
+    "When we apply `path` to a JSON-like object, we get a list of `PathValue` objects,\n",
+    "each of which contains a path and a value, e.g. when we apply `path` to the\n",
+    "arguments `**.emails.()` and `obj` given by\n",
+    "\n",
+    "```python\n",
+    "obj =  {\n",
+    "    'name': 'Alice',\n",
+    "    'roles': ['admin', 'user'],\n",
+    "    'test': {\n",
+    "        'test2': {\n",
+    "        'test3': {\n",
+    "            'emails': ['AliceDeep@example.com', 'JoeDeep@test.com']\n",
+    "        }\n",
+    "        }\n",
+    "    },\n",
+    "    'profile': {\n",
+    "        'age': 30,\n",
+    "        'emails': ['alice@example.com', 'alice.work@example.com']\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "we get the result\n",
+    "\n",
+    "```python\n",
+    "[PathValue(value=AliceDeep@example.com, path=['$', 'test', 'test2', 'test3', 'emails', '[0]']),\n",
+    " PathValue(value=JoeDeep@test.com, path=['$', 'test', 'test2', 'test3', 'emails', '[1]']),\n",
+    " PathValue(value=alice@example.com, path=['$', 'profile', 'emails', '[0]']),\n",
+    " PathValue(value=alice.work@example.com, path=['$', 'profile', 'emails', '[1]'])]\n",
+    " ```\n",
+    "\n",
+    " Now, `lower_case` doesn't work on  a list of `PathValue` objects, it works on a single\n",
+    " `str` argument. The purpose of `utils.wrap` is to create a new function\n",
+    "`utils.wrap(lower_case) : List[PathValue] -> List[OpValue]` that applies `lower_case` to each\n",
+    "`PathValue` object in the list:\n",
+    "\n",
+    "```python\n",
+    "[OpValue(value=ali\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +77,7 @@
     "      'test': {\n",
     "         'test2': {\n",
     "            'test3': {\n",
-    "               'emails': ['alicedeep@example.com', ['bobdeep@test.com', 'joedeep@test.com']]\n",
+    "               'emails': ['alicedeep@example.com', 'joedeep@test.com']\n",
     "            }\n",
     "         }\n",
     "      },\n",
@@ -50,83 +99,80 @@
     "   }\n",
     "]\n",
     "\n",
-    "data = data2[1]"
+    "data = data2[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[PathValue(value=['bob@mymail.com'], path=['$', 'test', 'test2', 'test3', 'emails'])]\n"
+      "[PathValue(value=alicedeep@example.com, path=['$', 'test', 'test2', 'test3', 'emails', '[0]']),\n",
+      " PathValue(value=joedeep@test.com, path=['$', 'test', 'test2', 'test3', 'emails', '[1]']),\n",
+      " PathValue(value=alice@example.com, path=['$', 'profile', 'emails', '[0]']),\n",
+      " PathValue(value=alice.work@example.com, path=['$', 'profile', 'emails', '[1]'])]\n"
      ]
     }
    ],
    "source": [
-    "vals = path.path_values(path='**.emails', obj=data)\n",
+    "vals = path.path_values(path='**.emails.*', obj=data)\n",
     "pprint(vals)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:jaf.utils:wrap called with func=<function <lambda> at 0x7aaff0d08c20>, func_name=λ x, obj ↦ x[0].upper())\n",
-      "DEBUG:jaf.utils:func_name='λ x, obj ↦ x[0].upper())' applied to args=([PathValue(value=['bob@mymail.com'], path=['$', 'test', 'test2', 'test3', 'emails'])],)\n",
-      "DEBUG:jaf.utils:new-list-path-value with arg [['bob@mymail.com']]\n",
-      "DEBUG:jaf.utils:apply λ x, obj ↦ x[0].upper()) to [['bob@mymail.com']] -> BOB@MYMAIL.COM\n",
-      "DEBUG:jaf.utils:results: ['BOB@MYMAIL.COM']\n"
+      "DEBUG:jaf.utils:Applying lower-case to [PathValue(value=alicedeep@example.com, path=['$', 'test', 'test2', 'test3', 'emails', '[0]']), PathValue(value=joedeep@test.com, path=['$', 'test', 'test2', 'test3', 'emails', '[1]']), PathValue(value=alice@example.com, path=['$', 'profile', 'emails', '[0]']), PathValue(value=alice.work@example.com, path=['$', 'profile', 'emails', '[1]'])]\n",
+      "DEBUG:jaf.utils:Combinations for 'lower-case': [('alicedeep@example.com', 'joedeep@test.com', 'alice@example.com', 'alice.work@example.com')]\n",
+      "ERROR:jaf.utils:Error in 'lower-case': <lambda>() got multiple values for argument 'obj'\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['BOB@MYMAIL.COM']\n"
+      "[]\n"
      ]
     }
    ],
    "source": [
-    "f = utils.wrap(func=lambda x, obj: x[0].upper())\n",
-    "results = f(vals, obj=data)\n",
+    "f = utils.wrap(func=lambda x, obj: x.lower(), func_name=\"lower-case\")\n",
+    "results = f(args=vals, obj=data)\n",
     "pprint(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:jaf.utils:wrap called with func=<function <lambda> at 0x7aaff82fbba0>, func_name=λ x, obj ↦ x.lower())\n",
-      "DEBUG:jaf.utils:func_name='λ x, obj ↦ x.lower())' applied to args=(['BOB@MYMAIL.COM'],)\n",
-      "DEBUG:jaf.utils:new-list-path-value with arg ['BOB@MYMAIL.COM']\n",
-      "DEBUG:jaf.utils:apply λ x, obj ↦ x.lower()) to ['BOB@MYMAIL.COM'] -> bob@mymail.com\n",
-      "DEBUG:jaf.utils:results: ['bob@mymail.com']\n",
-      "DEBUG:jaf.utils:wrap called with func=<function length at 0x7aaff0d09080>, func_name=length\n",
-      "DEBUG:jaf.utils:func_name='length' applied to args=(['bob@mymail.com'],)\n",
-      "DEBUG:jaf.utils:new-list-path-value with arg ['bob@mymail.com']\n",
-      "DEBUG:jaf.utils:apply length to ['bob@mymail.com'] -> 14\n",
-      "DEBUG:jaf.utils:results: [14]\n"
+      "DEBUG:jaf.utils:Applying <lambda> to []\n",
+      "DEBUG:jaf.utils:Combinations for '<lambda>': [()]\n",
+      "ERROR:jaf.utils:Error in '<lambda>': <lambda>() missing 1 required positional argument: 'x'\n",
+      "DEBUG:jaf.utils:Applying length to []\n",
+      "DEBUG:jaf.utils:Combinations for 'length': [()]\n",
+      "ERROR:jaf.utils:Error in 'length': length() missing 1 required positional argument: 'x'\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[14]\n"
+      "[]\n"
      ]
     }
    ],
@@ -148,25 +194,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:jaf.utils:wrap called with func=<function two at 0x7aaff8123060>, func_name=two\n",
-      "DEBUG:jaf.utils:func_name='two' applied to args=([14],)\n",
-      "DEBUG:jaf.utils:new-list-path-value with arg [14]\n",
-      "DEBUG:jaf.utils:apply two to [14] -> [28, 16]\n",
-      "DEBUG:jaf.utils:results: [[28, 16]]\n"
+      "DEBUG:jaf.utils:Applying two to []\n",
+      "DEBUG:jaf.utils:Combinations for 'two': [()]\n",
+      "ERROR:jaf.utils:Error in 'two': two() missing 1 required positional argument: 'x'\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[28, 16]]\n"
+      "[]\n"
      ]
     }
    ],
@@ -181,17 +225,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:jaf.utils:wrap called with func=<function add at 0x7aaff8122d40>, func_name=add\n",
-      "DEBUG:jaf.utils:func_name='add' applied to args=(28,)\n",
-      "ERROR:jaf.utils:Error applying add to (28,): 'int' object is not iterable, skipping...\n",
-      "DEBUG:jaf.utils:results: []\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m    \u001b[38;5;28;01mreturn\u001b[39;00m x \u001b[38;5;241m+\u001b[39m y\n\u001b[1;32m      6\u001b[0m f4 \u001b[38;5;241m=\u001b[39m utils\u001b[38;5;241m.\u001b[39mwrap(func\u001b[38;5;241m=\u001b[39madd)\n\u001b[0;32m----> 7\u001b[0m results4 \u001b[38;5;241m=\u001b[39m f4(\u001b[43mresults3\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m], results3[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m], obj\u001b[38;5;241m=\u001b[39mdata)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
